--- a/make_reservation.html
+++ b/make_reservation.html
@@ -55,10 +55,10 @@
       </div>
     </div>
 
-    <a href="/api/tables">API Table Link</a>
+    <a href="/api/reserve">API Table Link</a>
     <span>|</span>
     <a href="/api/waitlist">API Wait List</a>
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="./app.js"></script>
   </body>
 </html>
