--- a/view_tables.html
+++ b/view_tables.html
@@ -19,10 +19,24 @@
       <button type="button" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-home"></span></button>
 		</div>
 
+    <div class="panel panel-default">
+      <div class="panel-heading">Current Reservation</div>
+      <div class="panel-body">
+      </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Waiting List</h3>
+      </div>
+      <div class="panel-body">
+      </div>
+    </div>
+
     <a href="/api/tables">API Table Link</a>
     <span>|</span>
     <a href="/api/waitlist">API Wait List</a>
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <!-- <script type="text/javascript" src="./app.js"></script> -->
   </body>
 </html>
